<resources>
    <string name="app_name">Street Name Quiz</string>
    <string name="title_activity_maps">Street Name Quiz Graz</string>
    <string name="button_solution">Solution</string>
    <string name="button_next">Next</string>
    <string name="solution_incorrect_detail">You picked \'%s\'.</string>
    <string name="button_skip">Skip</string>
    <string name="starter_btn_privacy">Privacy Policy</string>
    <string name="starter_btn_licenses">Licenses</string>
    <string name="starter_btn_legal">Legal</string>
    <string name="starter_title">Let\'s get to know Graz!</string>
    <string name="starter_intro">It\'s quite simple: we\'ll show you a street name and you will need to find it on a blind map of Graz.</string>
    <string name="starter_policy">Accept our privacy policy to start.</string>
    <string name="starter_btn_accept">Accept and start</string>
    <string name="starter_btn_privacy_legal">Privacy and Legal</string>
    <string name="all_feedback">Feedback</string>
    <string name="feedback_dialog_title">Send Feedback</string>
    <string name="feedback_dialog_contents">You will be redirected to your email app to send feedback.</string>
    <string name="all_ok">OK</string>
    <string name="all_cancel">Cancel</string>
    <string name="dialog_points_message">You will get 10 points for every right guess, and minus 3 points (per round) if you either skip a street, make a wrong guess, or view the solution.</string>
    <string name="title_activity_districts">Pick a district</string>
    <string name="districts_city_title">%s (All)</string>
    <string name="quiz_result_success_1">Well done!</string>
    <string name="quiz_result_success_2">Correct!</string>
    <string name="quiz_result_success_3">That\'s right!</string>
    <string name="quiz_result_success_4">Hooray!</string>
    <string name="quiz_result_success_5">Perfect!</string>
    <string name="quiz_result_failed_1">Oh no!</string>
    <string name="quiz_result_failed_2">Wrong!</string>
    <string name="quiz_result_failed_3">Unfortunately, no.</string>
    <string name="quiz_result_failed_4">No, try again!</string>
    <string name="starter_beta">Beta</string>
</resources>
