<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StarterActivity">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:background="@drawable/bg_main"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <TextView
            style="@style/Starter.Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/starter_title"/>

        <TextView
            style="@style/Starter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/starter_intro"/>

        <TextView
            style="@style/Starter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/starter_beta"/>

        <TextView
            style="@style/Starter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/starter_policy"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                style="@style/StarterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starter_btn_privacy"/>

            <Button
                style="@style/StarterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starter_btn_licenses"/>

            <Button
                style="@style/StarterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starter_btn_legal"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnStart"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starter_btn_accept"/>

    </LinearLayout>

</RelativeLayout>